--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "express-session": "~1.12.1",
-    "mongoose": "~4.3.4"
+    "mongoose": "~4.3.4",
+    "password-hash": "~1.2.2"
   }
 }
