--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve-favicon": "~2.3.0",
     "express-session": "~1.12.1",
     "mongoose": "~4.3.4",
-    "password-hash": "~1.2.2"
+    "password-hash": "~1.2.2",
+    "node-rsa": "0.2.26"
   }
 }
