--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "~4.3.4",
     "password-hash": "~1.2.2",
     "node-rsa": "0.2.26",
-    "random-token": "0.0.8"
+    "random-token": "0.0.8",
+    "superfetch": "1.1.1"
   }
 }
