--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "password-hash": "~1.2.2",
     "node-rsa": "0.2.26",
     "random-token": "0.0.8",
-    "superfetch": "1.1.1"
+    "superfetch": "1.1.1",
+    "connect-flash": "0.1.1"
   }
 }
