--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "random-token": "0.0.8",
     "superfetch": "1.1.1",
     "connect-flash": "0.1.1",
-    "redis": "2.5.0-1"
+    "redis": "2.5.0-1",
+    "date-format": "0.0.2"
   }
 }
